fix(all pages): horizontal scroll issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,10 +146,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-a {
-    padding: 0;
+    width: 100%;
 }
 
 /* CSS RESET */
